--- a/jour8/Job03/index.html
+++ b/jour8/Job03/index.html
@@ -1,98 +1,31 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulaire de Création de Compte</title>
-    <!-- CDN de Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Document</title>
 </head>
 
-<body class="bg-gray-100 text-gray-800">
+<body>
+    <header>
+        <nav>
 
-    <!-- Header avec navigation stylisé avec Tailwind -->
-    <header class="bg-blue-600 text-white py-4">
-        <nav class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Mon Site</h1>
-            <ul class="flex space-x-4">
-                <li><a href="index.html" class="hover:text-yellow-400">Accueil</a></li>
-                <li><a href="index.html" class="hover:text-yellow-400">Inscription</a></li>
-                <li><a href="index.html" class="hover:text-yellow-400">Connexion</a></li>
-                <li><a href="index.html" class="hover:text-yellow-400">Rechercher</a></li>
-            </ul>
         </nav>
     </header>
+    <main>
 
-    <!-- Section Formulaire de Création de Compte -->
-    <section class="container mx-auto mt-8 p-4 bg-white shadow-md rounded">
-        <h2 class="text-2xl font-semibold mb-4">Créer un compte</h2>
-        <form action="index.html" method="POST" class="space-y-4">
-            <!-- Civilité (Radio Buttons) -->
-            <fieldset class="space-y-2">
-                <legend class="font-semibold">Civilité</legend>
-                <label><input type="radio" name="civilite" value="monsieur"> Monsieur</label>
-                <label><input type="radio" name="civilite" value="madame"> Madame</label>
-            </fieldset>
-
-            <!-- Prénom, Nom, Adresse -->
-            <fieldset class="space-y-2">
-                <legend class="font-semibold">Informations personnelles</legend>
-                <label for="prenom">Prénom:</label>
-                <input type="text" id="prenom" name="prenom" class="border border-gray-300 p-2 rounded w-full"
-                    required><br>
-                <label for="nom">Nom:</label>
-                <input type="text" id="nom" name="nom" class="border border-gray-300 p-2 rounded w-full" required><br>
-                <label for="adresse">Adresse:</label>
-                <input type="text" id="adresse" name="adresse" class="border border-gray-300 p-2 rounded w-full"
-                    required><br>
-            </fieldset>
-
-            <!-- Adresse Email -->
-            <fieldset class="space-y-2">
-                <legend class="font-semibold">Coordonnées</legend>
-                <label for="email">Adresse Email:</label>
-                <input type="email" id="email" name="email" class="border border-gray-300 p-2 rounded w-full"
-                    required><br>
-            </fieldset>
-
-            <!-- Mot de Passe et Validation -->
-            <fieldset class="space-y-2">
-                <legend class="font-semibold">Sécurité</legend>
-                <label for="password">Mot de Passe:</label>
-                <input type="password" id="password" name="password" class="border border-gray-300 p-2 rounded w-full"
-                    required><br>
-                <label for="password_confirm">Confirmez le Mot de Passe:</label>
-                <input type="password" id="password_confirm" name="password_confirm"
-                    class="border border-gray-300 p-2 rounded w-full" required><br>
-            </fieldset>
-
-            <!-- Passions (Checkbox) -->
-            <fieldset class="space-y-2">
-                <legend class="font-semibold">Passions</legend>
-                <label><input type="checkbox" name="passions" value="informatique"> Informatique</label><br>
-                <label><input type="checkbox" name="passions" value="voyages"> Voyages</label><br>
-                <label><input type="checkbox" name="passions" value="sport"> Sport</label><br>
-                <label><input type="checkbox" name="passions" value="lecture"> Lecture</label><br>
-            </fieldset>
-
-            <!-- Bouton de Validation -->
-            <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Valider</button>
-        </form>
-    </section>
-
-    <!-- Footer stylisé avec Tailwind -->
-    <footer class="bg-gray-800 text-white py-6 mt-8">
-        <nav class="container mx-auto text-center">
-            <ul class="flex justify-center space-x-6">
-                <li><a href="index.html" class="hover:text-yellow-400">Accueil</a></li>
-                <li><a href="index.html" class="hover:text-yellow-400">Inscription</a></li>
-                <li><a href="index.html" class="hover:text-yellow-400">Connexion</a></li>
-                <li><a href="index.html" class="hover:text-yellow-400">Rechercher</a></li>
+    </main>
+    <footer>
+        <div class="container mx-auto">
+            <p class="text-lg">© 2024 MonSite. Tous droits réservés.</p>
+            <ul class="flex justify-center space-x-4 mt-4">
+                <li><a href="#" class="hover:text-gray-300">Accueil</a></li>
+                <li><a href="#" class="hover:text-gray-300">À propos</a></li>
+                <li><a href="#" class="hover:text-gray-300">Contact</a></li>
             </ul>
-        </nav>
+        </div>
     </footer>
-
 </body>
 
 </html>
